src/objects/APTS_Consumption_Group_Detail__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Consumption_Name__c</fullName>
        <label>Consumption Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Consumption_code__c</fullName>
        <label>Consumption code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Consumption Group Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>APTS_Consumption_code__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CDM-{00000000}</displayFormat>
        <label>Consumption Group Unique ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumption Group Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>